feat(web): add user serach api
